# strawtea

./: .dockerignore  .gitignore  Dockerfile  RAILWAY.md  README.md  correction-strata.md  docker-compose.yml  plan.md  railway.toml  reqs.md  spec.md
deploy/: railway-entrypoint.sh
strawtea-be/: .env.example  Cargo.toml  flake.nix
strawtea-be/migrations/: 20260605000001_init.sql  20260609000002_investlog.sql  20260609000003_ticker_price_cache.sql  20260609000004_ticker_daily_price_cache.sql  20260610000005_rawtx.sql  20260617000006_remove_rawtx_import_duplicates.sql  20260620000007_user_settings.sql  20260623000008_ai_correction_screener.sql  20260623000009_background_jobs_and_throttle.sql  20260623000010_job_usage_events.sql  20260623000011_screener_status_override.sql  20260623000012_investlog_watchlist.sql  20260623000013_watchlist_cached_market_info.sql  20260623000014_watchlist_financial_snapshot.sql  20260623000015_investlog_ticker_notes.sql  20260623000016_push_notifications.sql
strawtea-be/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  state.rs  statement_parser.rs
strawtea-be/src/integrations/: edgar.rs  market_data.rs  mod.rs  openai.rs  push.rs  throttle.rs
strawtea-be/src/routes/: health.rs  investlog.rs  jobs.rs  me.rs  mod.rs  notifications.rs  screener.rs  settings.rs  spends.rs  stocks.rs
strawtea-ui/: .env.example  flake.nix  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
strawtea-ui/public/: config.js  push-listeners.js
strawtea-ui/src/: App.svelte  main.ts  strawtea.css  (+1 more)
(+16 files in other folders)
